--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,12 @@
-body
- {
-        background-color: rgb(240, 218, 240);           
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ; 
-        margin: 0px 40px ;
-     }
 
-#btn-c1 {
-    border-radius: 5px;
-    border: 1px solid rgb(177, 170, 170) ;
-    padding: 3px;
-    color: rgb(79, 77, 77);
-    margin-left: 60px;
-    font-size: 12px;
-}
-#btn-ViewCourse{
-    border-radius: 5px;
-    border: 1px solid rgb(177, 170, 170) ;
-    padding: 3px;
-    color: rgb(79, 77, 77);
-    font-size: 12px;
-    width: 90px;
-    margin-left: 90%;
+#title{
+  font-family: "BBH Bogle", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
-
-
+.Daily {
+  font-family: "Courgette", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
