--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-
-#title{
-  font-family: "BBH Bogle", sans-serif;
-  font-weight: 300;
-  font-style: normal;
+.heading,footer{
+    margin: 5px;
+    background-color: blue;
+    padding: 5px;
+    color: aliceblue;
+    text-align: center;
 }
-
-.Daily {
-  font-family: "Courgette", cursive;
-  font-weight: 400;
-  font-style: normal;
+#name{
+    font-size: 26px;
+    color: rgb(73, 78, 76);
+    margin: 10px -2px ;
 }
